After adding firebase and giftedchat.

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/melavang.png",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -23,7 +23,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.thangsea.thang",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.thangsea.thang"
     }
   }
 }
