--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@sherwinw/react-native-gifted-chat": "0.0.4",
     "expo": "^32.0.0",
+    "firebase": "^6.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-gifted-chat": "^0.8.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
